# updatehub

./: .gitignore  .gitreview  .rustfmt.toml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  Cargo.toml  Cross.toml  Jenkinsfile  Makefile  README.md  Vagrantfile  bitbucket-pipelines.yml  build.rs  cancellable_state.go  constants.go  copy.go  daemon.go  daemon_test.go  deny.toml  easyfota.go  easyfota_test.go  error.go  error_state.go  error_test.go  flake.nix  glide.yaml  idle_state.go  install_update.go  install_update_state.go  install_update_test.go  interfaces.go  main.go  object.go  object_test.go  package_object.go  package_object_test.go  release.toml  rustfmt.toml  (+17 more)
.github/: dependabot.yml
.github/workflows/: aarch64.yml  armv7.yml  audit.yml  ci.yml  code_style.yml  delete-old-artifacts.yaml  linux.yml
activeinactive/: activeinactive.go  activeinactive_test.go
client/: client.go  client_test.go  report.go  report_test.go  update.go  update_test.go
cmd/updatehub/: constants.go  main.go  main_test.go
cmd/updatehub-ctl/: main.go  types.go
cmd/updatehub-server/: main.go  udev.rules
copy/: copy.go  copy_test.go
doc/: agent-http.apib  agent-http.yaml
handlers/: interfaces.go  update.go
installifdifferent/: installifdifferent.go  installifdifferent_test.go  kernelfileinfo.go  kernelfileinfo_test.go  pattern.go  pattern_test.go
installmodes/: installmodes.go  installmodes_test.go
installmodes/copy/: copy.go  copy_test.go  mocks.go
installmodes/flash/: flash.go  flash_test.go
libarchive/: libarchive.go  libarchive_test.go
metadata/: common_test.go  firmware.go  firmware_test.go  json.go  json_test.go  keyvalueparser.go  keyvalueparser_test.go  metadata.go  object.go  object_test.go  package_object.go  package_object_test.go  update.go  update_test.go
mtd/: mtd.go  mtd_test.go  ubifs.go  ubifs_test.go
pkg/: object.go  object_test.go
plugins/: plugins.go
plugins/copy/: copy.go
server/: agent_backend.go  agent_backend_test.go  backend.go  daemon.go  daemon_test.go  local_server.go  local_server_test.go  router.go  router_test.go  server_backend.go  server_backend_test.go  updatepackage.go  updatepackage_test.go
src/: build_info.rs  client.rs  cmdline.rs  de_helpers.rs  hook.rs  http_api.rs  lib.rs  logger.rs  main.rs  mem_drain.rs  persistent_settings.rs  process.rs  runtime_settings.rs  se_helpers.rs  serde_helpers.rs  settings.rs
testsmocks/: cmdline_executer.go  copy.go  custom_copier.go  file.go  filesystem_backend.go  filesystem_helper.go  libarchive.go  mtd.go  ubifs.go  ubifs_helper.go
updatehub/: Cargo.toml  build.rs  cancellable_state.go  constants.go  daemon.go  daemon_test.go  downloaded_state.go  downloaded_state_test.go  downloading_state.go  downloading_state_test.go  error.go  error_state.go  error_state_test.go  error_test.go  exit_state.go  exit_state_test.go  idle_state.go  idle_state_test.go  installed_state.go  installed_state_test.go  installing_state.go  installing_state_test.go  poll_state.go  poll_state_test.go  probe_state.go  probe_state_test.go  reboot_state.go  reboot_state_test.go  rebooting_state.go  rebooting_state_test.go  release.toml  settings.go  settings_test.go  states.go  states_test.go  transition.go  transition_test.go  updatehub.go  updatehub_test.go  updateprobe_state.go  (+3 more)
updatehub-cloud-sdk/: Cargo.toml
updatehub-cloud-sdk/src/: api.rs  client.rs  lib.rs
updatehub-cloud-sdk/tests/: integration_test.rs
updatehub-package-schema/: Cargo.toml
updatehub-package-schema/src/: bita.rs  copy.rs  flash.rs  imxkobs.rs  lib.rs  mender.rs  raw.rs  raw_delta.rs  tarball.rs  test.rs  ubifs.rs  uboot_env.rs  update_package.rs  zephyr.rs
updatehub-package-schema/src/definitions/: chunk_size.rs  count.rs  filesystem.rs  install_if_different.rs  mod.rs  skip.rs  target_format.rs  target_permissions.rs  target_type.rs  truncate.rs
updatehub-sdk/: Cargo.toml
updatehub-sdk/examples/: listener.rs
updatehub-sdk/src/: client.rs  error.rs  lib.rs  listener.rs  serde_helpers.rs
updatehub-sdk/src/api/: mod.rs
updatehub-sdk/src/api/info/: firmware.rs  mod.rs  runtime_settings.rs  settings.rs
updatehub-sdk/src/client/: info.rs  mod.rs
updatehub-sdk/tests/: openapi_integration.rs
updatehub/fixtures/: message.bita  test.uhupkg  tree.tar
updatehub/src/: build_info.rs  cloud_mock.rs  http_api.rs  lib.rs  logger.rs  main.rs  mem_drain.rs  runtime_settings.rs  serde_helpers.rs  settings.rs  setup_mock_env.rs  tests.rs
updatehub/src/client/: mod.rs  tests.rs
updatehub/src/firmware/: hook.rs  installation_set.rs  metadata_value.rs  mod.rs  tests.rs
updatehub/src/object/: info.rs  macros.rs  mod.rs
updatehub/src/object/installer/: bita.rs  copy.rs  flash.rs  imxkobs.rs  mender.rs  mod.rs  raw.rs  raw_delta.rs  tarball.rs  test.rs  ubifs.rs  uboot_env.rs  zephyr.rs
updatehub/src/states/: direct_download.rs  download.rs  entry_point.rs  error.rs  idle.rs  install.rs  macros.rs  mod.rs  park.rs  poll.rs  prepare_download.rs  prepare_local_install.rs  probe.rs  reboot.rs  tests.rs  transition.rs  validation.rs
updatehub/src/states/actor/: download_abort.rs  info.rs  local_install.rs  mod.rs  probe.rs  remote_install.rs  stepper.rs  test.rs
updatehub/src/states/machine/: address.rs  mod.rs
updatehub/src/update_package/: mod.rs  supported_hardware.rs  tests.rs
updatehub/src/update_package/object/: copy.rs  imxkobs.rs  macros.rs  mod.rs  tarball.rs  test.rs  ubifs.rs
updatehub/src/update_package/object/definitions/: count.rs  target_type.rs
updatehub/src/utils/: definitions.rs  delta.rs  deserialize.rs  fs.rs  io.rs  log.rs  losetup.rs  mod.rs  mtd.rs
updatehub/tests/: common.rs  failed_integration_test.rs  successful_integration_test.rs
utils/: cmdline.go  cmdline_test.go  constants.go  copy.go  copy_test.go  custom_copy.go  custom_copy_test.go  error.go  error_test.go  file.go  file_test.go  filesystem.go  filesystem_test.go  limitedreader.go  limitedreader_test.go  mocks.go  mtd.go  mtd_test.go  sha.go  sha_test.go  system.go  system_test.go  ubifs.go  ubifs_test.go  utils.go
(+104 files in other folders)
