# Copyright (C) 2017, 2018 O.S. Systems Sofware LTDA
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "updatehub"
version = "0.1.0"
authors = ["Otavio Salvador <otavio@ossystems.com.br>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
actix-web = "0.7"
actix = "0.7"
chrono = { version = "0.4", features = ["serde"] }
crypto-hash = "0.3"
easy_process = "0.1"
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
hex = "0.3"
slog = "2"
slog-async = "2"
slog-scope = "4"
slog-term = "2"
sys-mount = "1"
lazy_static = "1"
nix = "0.13"
parse_duration = "1"
rand = "0.6"
reqwest = "0.9"
serde = { version = "1", features = ["rc", "derive"]}
serde_derive = "1"
serde_ini = "0.1"
serde_json = "1"
structopt = "0.2"
tempfile = "3"
walkdir = "2"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'

[build-dependencies]
git-version = "0.2"

[dev-dependencies]
loopdev = "0.2"
mockito = "0.17"
pretty_assertions = "0.6"
