[workspace]

members = [
    "updatehub",
    "updatehub-package-schema",
    "updatehub-sdk",
]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'

[replace]
"actix-http:2.0.0-alpha.2" = { package = "actix-http", git = "https://github.com/actix/actix-web" }
"awc:2.0.0-alpha.1" = { package = "awc", git = "https://github.com/actix/actix-web" }
