# Copyright (C) 2020 O.S. Systems Sofware LTDA
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "updatehub-cloud-sdk"
version = "0.1.0"
authors = ["Jonathas-Conceicao <jonathas.conceicao@ossystems.com.br>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
async-std = { version = "1", default-features = false, features = ["attributes"] }
derive_more = { version = "0.99", default-features = false, features = ["display", "error", "from"] }
openssl = "0.10"
pkg-schema = { path = "../updatehub-package-schema", package = "updatehub-package-schema" }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
slog-scope = "4"
surf = { version = "2", default-features = false, features = ["h1-client"] }

[dev-dependencies]
mockito = "0.29"
tempfile = "3"

