# Copyright (C) 2020 O.S. Systems Sofware LTDA
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "updatehub-cloud-sdk"
version = "2.0.2"
authors = ["Jonathas-Conceicao <jonathas.conceicao@ossystems.com.br>"]
license = "Apache-2.0"
edition = "2018"
description = "API for interacting with the UpdateHub Cloud"
repository = "https://github.com/UpdateHub/updatehub"
homepage = "https://github.com/UpdateHub/updatehub"
documentation = "https://docs.rs/updatehub-cloud-sdk"

[dependencies]
async-std = { version = "1", default-features = false, features = ["attributes"] }
derive_more = { version = "0.99", default-features = false, features = ["display", "error", "from"] }
http-client = "6"
isahc = "0.9"
openssl = "0.10"
pkg-schema = { path = "../updatehub-package-schema", package = "updatehub-package-schema", version = "2" }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
slog-scope = "4"
surf = { version = "2", default-features = false, features = ["curl-client"] }

[dev-dependencies]
mockito = "0.30"
tempfile = "3"

