# Copyright (C) 2020 O.S. Systems Sofware LTDA
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "updatehub-cloud-sdk"
version = "2.1.5"
authors = ["Jonathas-Conceicao <jonathas.conceicao@ossystems.com.br>"]
license = "Apache-2.0"
edition = "2021"
description = "API for interacting with the UpdateHub Cloud"
repository = "https://github.com/UpdateHub/updatehub"
homepage = "https://github.com/UpdateHub/updatehub"
documentation = "https://docs.rs/updatehub-cloud-sdk"

[dependencies]
derive_more = { version = "0.99", default-features = false, features = ["display", "error", "from"] }
openssl = "0.10"
pkg-schema = { path = "../updatehub-package-schema", package = "updatehub-package-schema", version = "2" }
reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", default-features = false, features = ["derive", "std"] }
serde_json = "1"
slog-scope = "4"
tokio = { version = "1", default-features = false, features = ["fs", "io-util", "macros"] }
url = { version = "2", default-features = false }

[dev-dependencies]
mockito = "1"
tempfile = "3"

