# Copyright (C) 2019 O.S. Systems Sofware LTDA
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "updatehub-package-schema"
version = "0.1.0"
authors = ["Otavio Salvador <otavio@ossystems.com.br>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
failure = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "0.6"
