# Copyright (C) 2019 O.S. Systems Sofware LTDA
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "updatehub-package-schema"
version = "0.1.0"
authors = ["Otavio Salvador <otavio@ossystems.com.br>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }

[dev-dependencies]
pretty_assertions = "0.6"
serde_json = { version = "1", default-features = false, features = ["std"] }
