# Copyright (C) 2019 O.S. Systems Sofware LTDA
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "updatehub-package-schema"
version = "2.0.4"
authors = ["Otavio Salvador <otavio@ossystems.com.br>"]
license = "Apache-2.0"
edition = "2018"
description = "UpdateHub Packages metadata schemas"
repository = "https://github.com/UpdateHub/updatehub"
homepage = "https://github.com/UpdateHub/updatehub"
documentation = "https://docs.rs/updatehub-package-schema"

[dependencies]
derive_more = { version = "0.99", default-features = false, features = ["display"] }
serde = { version = "=1.0.128", default-features = false, features = ["derive"] }

[dev-dependencies]
pretty_assertions = "0.7"
serde_json = { version = "1", default-features = false, features = ["std"] }
