# Copyright (C) 2019, 2020 O.S. Systems Sofware LTDA
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "updatehub-sdk"
version = "0.1.0"
authors = ["asakiz <asakizin@gmail.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.6", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
derive_more = { version = "0.99", default-features = false, features = ["display", "error", "from"] }
log = "0.4"
ms-converter = "1"
serde = { version = "1", default-features = false, features = ["derive"] }
surf = { version = "2", default-features = false, features = ["curl-client"] }

[dev-dependencies]
async-std = { version = "1", default-features = false, features = ["attributes"] }
tempfile = "3"
testcontainers = "0.12"

[[example]]
name = "listener"
path = "examples/listener.rs"
