# Copyright (C) 2019, 2020 O.S. Systems Sofware LTDA
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "updatehub-sdk"
version = "2.1.4"
authors = ["asakiz <asakizin@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "UpdateHub SDK used to interact with a running instance of the UpdateHub Agent"
repository = "https://github.com/UpdateHub/updatehub"
homepage = "https://github.com/UpdateHub/updatehub"
documentation = "https://docs.rs/updatehub-sdk"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde"] }
derive_more = { version = "1.0", default-features = false, features = ["display", "error", "from"] }
log = "0.4"
ms-converter = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", default-features = false, features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "net"] }

[dev-dependencies]
tempfile = "3"
testcontainers = "0.15"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }

[[example]]
name = "listener"
path = "examples/listener.rs"
