# Copyright (C) 2017, 2018 O.S. Systems Sofware LTDA
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "updatehub"
version = "2.0.6"
authors = ["Otavio Salvador <otavio@ossystems.com.br>"]
license = "Apache-2.0"
edition = "2018"
default-run = "updatehub"
publish = false

[features]
default = ["test-env"]

# Feature to allow deserialization from v1 Settings
v1-parsing = ["serde_ini"]
test-env = ["async-ctrlc", "mockito"]

# The main application binary
[[bin]]
name = "updatehub"
test = false
bench = false

# Binary to setup the env and mock in run updatehub locally for testing
[[bin]]
name = "updatehub-setup-mock-env"
path = "src/setup_mock_env.rs"
test = true
required-features = ["test-env"]

[dependencies]
argh = "0.1.3"
async-ctrlc = { version = "1", optional = true }
async-channel = "1"
async-lock = "2"
async-trait = "0.1"
bitar = { version = "0.8", git = "https://github.com/oll3/bita" }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
cloud = { path = "../updatehub-cloud-sdk", package = "updatehub-cloud-sdk" }
compress-tools = "0.12"
derive_more = { version = "0.99", default-features = false, features = ["deref", "deref_mut", "display", "error", "from"] }
easy_process = "0.2"
find-binary-version = "0.3"
futures-util = { version = "0.3", default-features = false }
infer = "0.5"
lazy_static = "1"
logging_content = { version = "0.1", git = "https://github.com/OSSystems/logging_content.git" }
mockito = { version = "0.30", optional = true }
ms-converter = "1"
nix = "0.22"
openssl = "0.10"
pkg-schema = { path = "../updatehub-package-schema", package = "updatehub-package-schema" }
quale = "1"
regex = { version = "1", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls"] }
sdk = { path = "../updatehub-sdk", package = "updatehub-sdk" }
serde = { version = "1", default-features = false, features = ["rc", "derive"] }
serde_ini = { version = "0.2", default-features = false, optional = true }
serde_json = { version = "1", default-features = false }
slog = { version = "2", default-features = false, features = ["max_level_trace", "release_max_level_trace"] }
slog-async = { version = "2", default-features = false }
slog-scope = "4"
slog-term = "2"
sys-mount = { version = "1", default-features = false }
tempfile = "3"
timeout-readwrite = "0.3"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "fs", "macros"] }
toml = "0.5"
url = "2"
walkdir = "2"
warp = "0.3"

[build-dependencies]
git-version = "0.3"

[dev-dependencies]
flate2 = "1"
insta = { version = "1", features = ["backtrace"] }

# Pin version as this is the last one not using bindgen
loopdev = "=0.2.1"

pretty_assertions = "0.7"
regex = "1"
rexpect = "0.4"
tempfile = "3"
