# Copyright (C) 2017, 2018 O.S. Systems Sofware LTDA
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "updatehub"
description = "A Firmware Over-The-Air agent for Embedded and Industrial Linux-based devices"
homepage = "https://updatehub.io/"
version = "2.1.3"
authors = ["Otavio Salvador <otavio@ossystems.com.br>"]
license = "Apache-2.0"
edition = "2021"
default-run = "updatehub"
publish = false
repository = "https://github.com/UpdateHub/updatehub.git"

[features]
default = ["test-env"]

# Feature to allow deserialization from v1 Settings
v1-parsing = ["serde_ini"]
test-env = ["async-ctrlc", "mockito"]

# The main application binary
[[bin]]
name = "updatehub"
test = false
bench = false

# Binary to setup the env and mock in run updatehub locally for testing
[[bin]]
name = "updatehub-setup-mock-env"
path = "src/setup_mock_env.rs"
test = true
required-features = ["test-env"]

[dependencies]
argh = "0.1.3"
async-ctrlc = { version = "1", optional = true }
async-channel = "1"
async-lock = "2"
async-trait = "0.1"
bitar = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
cloud = { path = "../updatehub-cloud-sdk", package = "updatehub-cloud-sdk" }
compress-tools = { version = "0.14", features = ["tokio_support"] }
derive_more = { version = "0.99", default-features = false, features = ["deref", "deref_mut", "display", "error", "from"] }
easy_process = "0.2"
find-binary-version = "0.5"
futures-util = { version = "0.3", default-features = false }
lazy_static = "1"
logging_content = "0.1"
mockito = { version = "1", optional = true }
ms-converter = "1"
nix = "0.26"
openssl = "0.10"
pkg-schema = { path = "../updatehub-package-schema", package = "updatehub-package-schema" }
quale = "1"
regex = { version = "1", default-features = false }
reqwest = { version = "0.11", default-features = false, features = ["json", "native-tls"] }
sdk = { path = "../updatehub-sdk", package = "updatehub-sdk" }
serde = { version = "1", default-features = false, features = ["rc", "derive"] }
serde_ini = { version = "0.2", default-features = false, optional = true }
serde_json = { version = "1", default-features = false }
slog = { version = "2", default-features = false, features = ["max_level_trace", "release_max_level_trace"] }
slog-async = { version = "2", default-features = false }
slog-scope = "4"
slog-term = { version = "2", default-features = false }
sys-mount = { version = "2", default-features = false }
tempfile = "3"
tokio-io-timeout = "1"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "fs", "macros"] }
tokio-take-seek = "0.1"
toml = "0.7"
url = "2"
walkdir = "2"
warp = "0.3"

[build-dependencies]
git-version = "0.3"

[dev-dependencies]
expectrl = "0.4"
flate2 = "1"
insta = "1"
loopdev = "0.4"
pretty_assertions = "1"
regex = "1"
tempfile = "3"
